Fix display of expiration date on mobile

--- a/shared/components/pages/ActivationPage.less
+++ b/shared/components/pages/ActivationPage.less
@@ -155,6 +155,22 @@
                 font-weight: 400;
             }
 
+            .ActivationPage__pass-info--expires {
+                @media @phone {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+            }
+
+            .ActivationPage__expires {
+                @media @phone {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+            }
+
             .ActivationPage__actions {
                 position: absolute;
                 display: flex;
